--- a/style.css
+++ b/style.css
@@ -1,26 +1,21 @@
 body {
     margin: 0px;
     background-color: aliceblue;
+    background-image:url(https://e0.pxfuel.com/wallpapers/118/113/desktop-wallpaper-gym-black.jpg);
 }
 
-.button-add{
-    border: none;
+button{
     font-size: 16px;
+    border-radius: 8px;
+    padding: 10px 25px;
     text-align: center;
-    background-color: white;
-    color: black;
-    border: 2px solid aqua ;
-    transition: 0.4s;
-}
-
-.button-add:hover {
-    background-color: bisque;
-    color: white;
+    
 }
 
 .page-nav{
-    background-color: aqua;
+    background-color: black;
     border: 1px solid black;
+    position: relative;
     
 }
 .page-nav h1{
@@ -28,17 +23,36 @@ body {
 
 }
 
+.buttton-checkout{
+    background-color: white;
+    color: black;
+    border: 2px solid aqua ;
+    transition: 0.4s;
+    position: absolute;
+    right: 15px;
+    bottom: 10px;
+}
+.buttton-checkout:hover{
+    background-color: bisque;
+    color: white;
+}
+
 .page-content{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    border: 1px solid red;
+    border: 1px solid white;
 }
 
 .product-container {
+    width: 27%;
     margin: 15px;
     padding: 2px 16px;
+    position: relative;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
+    background-color: rgb(240, 237, 237);
 }
+
 
 .product-container:hover{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -47,6 +61,79 @@ body {
 
 
 .product-container img {
+
     width: 300px;
+    
+
+}
+
+.product-container h1 {
+    margin-bottom: 10px;
+    margin-left: 15px;
+}
+
+.button-add{
+    
+  
+    background-color: white;
+    color: black;
+    border: 2px solid black ;
+    transition: 0.4s;
+    position: absolute;
+    right: 15px;
+    bottom: 10px;
+
+
+    
+}
+
+.button-add:hover {
+    background-color: bisque;
+    color: white;
+}
+
+/* menu */
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-left: 5%;
+    padding-right: 5%;
+    font-weight: bold;
+    
+}
+
+#logo {
+    color: white;
+    font-size: 45px;
+}
+
+ul li{
+    display: inline-block;
+    padding: 0 20px;
+}
+
+a{
+    color: white;
+    text-decoration: none;
+}
+a:hover{
+    color: aquamarine;
+
+}
+
+.registrar{
+    display: flex;
+    justify-content: center;
+    padding: 200px 
+
+}
+#registrar1{
+  
+    background: #C2E71F;
+    color: #000;
+    font-weight: bold;
+    padding: 20px 40px;
 
 }
