--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ nav {
 }
 
 #logo {
-    color: white;
+    color: beige;
     font-size: 45px;
 }
 
@@ -115,7 +115,7 @@ ul li{
 }
 
 a{
-    color: white;
+    color: beige;
     text-decoration: none;
 }
 a:hover{
@@ -137,3 +137,45 @@ a:hover{
     padding: 20px 40px;
 
 }
+
+html{
+    height: 100%;
+}
+
+
+
+/* footer */
+
+footer{
+    background-color: beige;
+    text-align: center;
+    text-transform: uppercase;
+    padding-top: 30px;
+}
+
+footer li{
+    list-style: none;
+    display: inline-block;
+    margin: 10px;
+}
+
+.footer-icons a{
+    
+ 
+    color: #000;
+    padding: 15px;
+    border-radius: 100px;
+    display: flex;
+    font-size: 25px;
+
+}
+li a img{
+    width: 40px;
+    height: 40px;
+    margin-bottom: 20px;
+    
+   
+}
+
+
+
